# t3-mono

./: .gitignore  Cargo.toml  DEPENDENCIES.md  PUBLISHING.md  README.md
.claude/: settings.json
.claude/commands/: create-package.md
.github/: dependabot.yml
.github/workflows/: check-updates.yml  release.yml
npm/: install.js  package.json
scripts/: check-updates.sh
src/: main.rs
src/cli/: args.rs  mod.rs
src/commands/: add.rs  create.rs
src/scaffolding/: ai.rs  better_auth.rs  cmd.rs  mod.rs  next_auth.rs  restate.rs  t3.rs  ui.rs
src/templates/: embedded.rs  remote.rs
src/utils/: fs.rs  mod.rs  npm.rs
templates/: .gitkeep
templates/ai/core/chunking/: index.ts
templates/ai/core/embedding/: index.ts
templates/ai/core/logging/: index.ts
templates/ai/core/providers/: index.ts
templates/cmd/components/chat/: ChatMarkdown.tsx  ChatMessageBubble.tsx  ChatPanel.tsx  FollowUpSuggestions.tsx  MessageList.tsx  TokenRenderer.tsx  TypingIndicator.tsx
templates/cmd/components/docs/: AIDocGenerator.tsx  DocsTemplateBadges.tsx
templates/cmd/components/layout/: CommandIsland.tsx  SplitViewShell.tsx
templates/cmd/components/tables/: AITable.tsx  AITableAddColumn.tsx  AITableCellDetail.tsx  AITableCellDisplay.tsx  AITableColumnHeader.tsx  AITableToolbar.tsx  TablesUseCaseBadges.tsx  useAITableReducer.ts
templates/cmd/components/ui/: badge.tsx  popover.tsx  slot.tsx
templates/cmd/lib/: ai-doc-types.ts  ai-table-agent-presets.ts  ai-table-types.ts  chat-tokens.ts  command-island-context.tsx  concurrency.ts  split-view-context.tsx  view-state.ts
templates/cmd/server/chat/: chat-tools.ts  context-builder.ts  docling-client.ts  llm.ts
templates/cmd/server/docs/: file-generator.ts  json-utils.ts  orchestrator.ts  section-executor.ts
templates/docker/: Dockerfile.database  docker-compose.yml
templates/docs/: I18N.md  PRISMA.md  README.md  THEMING.md
templates/restate/: .env.example  QUICKSTART.md  docker-compose.yml
templates/restate/docs/: best-practices.md
templates/restate/services/: .env.example  Dockerfile  package.json
templates/restate/services/src/: aws-s3.ts  (+4 more)
templates/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  globals.css  hover-card.tsx  input.tsx  kbd.tsx  label.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  slot.tsx  sonner.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
(+18 files in other folders)
