[package]
name = "t3-mono"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Ross"]
description = "CLI tool to scaffold T3 stack apps with Better Auth and optional AI/UI/Restate extensions"
license = "MIT"
repository = "https://github.com/elijahross/boilerplate_moduls"
keywords = ["cli", "monorepo", "t3-stack", "scaffolding", "next.js", "restate"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "t3-mono"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git Operations
git2 = "0.18"

# Terminal UI
indicatif = "0.17"
console = "0.16"
dialoguer = "0.11"

# Template Processing
handlebars = "5.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Embedded Templates
rust-embed = "8.2"

# Cross-platform Paths
dirs = "5.0"

# Futures for async operations
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
