[package]
name = "t3-mono"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Ross"]
description = "CLI tool to scaffold T3 stack apps with Better Auth and optional AI/UI/Restate extensions"
license = "MIT"
repository = "https://github.com/elijahross/t3-mono"
keywords = ["cli", "monorepo", "t3-stack", "scaffolding", "next.js", "restate"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "t3-mono"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5.54", features = ["derive", "color", "suggestions"] }

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }

# HTTP Client
reqwest = { version = "0.13.1", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Git Operations
git2 = "0.20.3"

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

# Terminal UI
indicatif = "0.18.3"
console = "0.16.2"
dialoguer = "0.12.0"

# Template Processing
handlebars = "6.4.0"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Embedded Templates
rust-embed = "8.11.0"

# Cross-platform Paths
dirs = "6.0.0"

# Futures for async operations
futures = "0.3.31"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
